--- a/nx.json
+++ b/nx.json
@@ -5,6 +5,11 @@
   "affected": {
     "defaultBase": "main"
   },
+  "pluginsConfig": {
+    "@nrwl/js": {
+      "analyzeSourceFiles": true
+    }
+  },
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/nx-cloud",
