--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "cowsay": "1.5.0"
+  },
   "devDependencies": {
+    "@11ty/eleventy": "1.0.0",
     "@nrwl/cli": "14.7.12",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.7.12",
